# GNMI-SHOW-orig

./: .gitignore  .gitmodules  Makefile  README.md  azure-pipelines.yml  pyproject.toml
.github/codeql/: codeql-config.yml
gnmi_show/: __init__.py  azure_api.py  cli.py  formatter.py
tests/: test_show_cli.py
